# CS251-Outlabs

180050003-180050070-180050092-outlab1/: func.sh  pdf_to_text.sh
180050003-180050070-180050092-outlab1/Task1/: isPrimeYear.sh
180050003-180050070-180050092-outlab1/Task3/: helpGroupTheCsv.sh
180050003-180050070-180050092-outlab1/Task5/: recursiveSearch.sh
Hackermenn-outlab7/: average_balls.py  hitman.py  insert.py  prep_stmt.py
Hackermenn-outlab8/: BasicClient.java  BasicServer.java  FetchAndProcess.java  FetchAndProcessFromDisk.java  FetchAndProcessFromNetwork.java  FetchAndProcessFromNetworkFast.java  MultiServer.java
Hackermenn-outlab9/: planner-repo.tar  planner.apk
hackermenn-outlab7/: average_runs.py  create_tables.py
outlab10-Hackermenn/q1/: Beamer.tex
outlab10-Hackermenn/q2/: diagram.tex
outlab2-Hackermenn/: references.txt
outlab2-Hackermenn/Task3/: calculateCPI.sh  calculateSPI.sh
outlab2-Hackermenn/task3-testcases/: viewCourse.sh  viewSemester.sh  viewWithColor.sh  viewWithoutColor.awk
outlab3-Hackermenn/: Q1.py  Q2.py  Q4.py  Q5.py  references.txt
outlab4-Hackermenn-original/: references.txt
outlab4-Hackermenn-original/Task1/: task1.py
outlab4-Hackermenn-original/Task2/: task2.py
outlab4-Hackermenn-original/Task3/: task3.py
outlab4-Hackermenn-original/Task4/: driver.py  task4.py
outlab5-Hackermenn/q6/: CMakeLists.txt  rawmake
outlab5-Hackermenn/q6/mygame/: CMakeLists.txt
outlab6-180050003/: references.txt
outlab7-resources/: average_runs.py  create_tables.py  ipl.db  sql_injection.py  win_chance.py
(+47 files in other folders)
